--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,17 +3,17 @@ options:
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/${_SERVICE_NAME}:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/wildfire-api:$COMMIT_SHA', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/${_SERVICE_NAME}:$COMMIT_SHA']
+    args: ['push', 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/wildfire-api:$COMMIT_SHA']
 
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       [
-        'run', 'deploy', '${_SERVICE_NAME}',
-        '--image', 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/${_SERVICE_NAME}:$COMMIT_SHA',
+        'run', 'deploy', 'wildfire-api',
+        '--image', 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/wildfire-api:$COMMIT_SHA',
         '--region', 'us-central1',
         '--platform', 'managed',
         '--allow-unauthenticated',
@@ -22,4 +22,4 @@ steps:
       ]
 
 images:
-  - 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/${_SERVICE_NAME}:$COMMIT_SHA'
+  - 'us-central1-docker.pkg.dev/code-for-planet/wildfire-repo/wildfire-api:$COMMIT_SHA'
